gvb_interp/src/snapshots/gvb_interp__parser__parser_tests__empty_line.snap
---
source: gvb_interp/src/parser.rs
expression: parse_line(line).to_string(line)

---
label: None
len: 0
eol: None
diagnostics: 
  Error<0..0>: 缺少行号
  Error<0..0>: 缺少语句
-----------------

