gvb_interp/src/snapshots/gvb_interp__parser__parser_tests__get_put.snap
---
source: gvb_interp/src/parser.rs
expression: parse_line(line).0.to_string(line)

---
label: Some((0..2, Label(10)))
len: 30
eol: None
diagnostics: 
-----------------
3..18     GET # (<NUM: 7> / <NUM: 2>), (<NUM: 2> * <NUM: 5>)
21..30    PUT # (<NUM: 3> * <NUM: 2>), <ID: k>

