gvb_interp/src/snapshots/gvb_interp__parser__parser_tests__if3.snap
---
source: gvb_interp/src/parser.rs
expression: parse_line(line).0.to_string(line)

---
label: Some((0..2, Label(10)))
len: 25
eol: None
diagnostics: 
  Error<8..12>: THEN 之后缺少语句
-----------------
3..25     IF <ID: K> THEN
          ELSE      
18..19        [GOTO] 2
20..22        [GOTO] 13
23..24        [GOTO] 7

