gvb_interp/src/snapshots/gvb_interp__parser__parser_tests__label_followed_by_e.snap
---
source: gvb_interp/src/parser.rs
expression: parse_line(line).0.to_string(line)

---
label: Some((0..2, Label(10)))
len: 6
eol: None
diagnostics: 
-----------------
3..6      LET <ID: e> = <NUM: 1>

