gvb_interp/src/snapshots/gvb_interp__parser__parser_tests__locate.snap
---
source: gvb_interp/src/parser.rs
expression: parse_line(line).to_string(line)

---
label: Some(Label(10))
len: 39
eol: None
diagnostics: 
-----------------
3..15     LOCATE <NUM: 1>, (<ID: A> + <NUM: 2>)
16..26    LOCATE (<ID: A> + <NUM: 1>)
28..38    LOCATE , <NUM: 2>

